--- a/components/contact/Contact.scss
+++ b/components/contact/Contact.scss
@@ -1,3 +1,12 @@
-.container {
+.contact-container {
   max-width: 600px;
+}
+
+.contact-header {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.margin-5{
+  margin: 5px;
 }
