--- a/components/home/Home.scss
+++ b/components/home/Home.scss
@@ -1,3 +1,4 @@
+@use '../../styles/variables/colors' as *;
 .row {
   padding-bottom: 20px;
 }
@@ -5,4 +6,14 @@
 .stack {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.title {
+  margin: auto;
+  width: 100%;
+  background-color: $base-color;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+
 }
