--- a/styles/variables/colors.scss
+++ b/styles/variables/colors.scss
@@ -2,6 +2,7 @@
 $base-color: rgb(122, 134, 126);
 $background-color: #a7a7a7;
 $main-background-color: #b1a7a7;
+$accent-color: #a6c7cf;
 
 //Primary Colors
 $white-color: #e2e2e2;
